already problems on the header... great)

--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fortuna Daniel</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="assets/index.css">
 </head>
+
 <body>
-    
+    <div class="header">
+        <div class="lightmode">
+                <img src="assets/images/sun.png">
+        </div>
+        <div class="header-text">
+            <p>About me</p>
+            <p>Projects</p>
+            <p>Contacts</p>
+        </div>
+    </div>
 </body>
+
 </html>
