getting started on the coding

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="header">
         <div class="lightmode">
-                <img src="assets/images/sun.png">
+                <img id="sunImage" src="assets/images/sun.png">
         </div>
         <div class="header-text">
             <p>About me</p>
@@ -24,6 +24,27 @@
             <p>Contacts</p>
         </div>
     </div>
+
+    <div class="landing-page">
+        <div class="left-side">
+            <div class="left-upper">
+                <div class="hitext">
+                   <p> Hi ✌️, I'm <br> <span>Fortuna Daniel</span></p>
+                </div>
+            </div>
+            <div class="left-lower">
+                <div class="left-1">
+                    <p>An aspiring Front-End Developer</p>
+                </div>
+                <div class="left-2">
+                    <button class="contact-me-button">Contact me</button>
+                    <button class="download-cv-button">See my cv <img src="assets/images/downloadicon.png"></button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="assets/index.js"></script>
 </body>
 
 </html>
