--- a/index.html
+++ b/index.html
@@ -14,36 +14,89 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="lightmode">
+    <div class="landing">
+        <div class="header">
+            <div class="lightmode">
                 <img id="sunImage" src="assets/images/sun.png">
-        </div>
-        <div class="header-text">
-            <p>About me</p>
-            <p>Projects</p>
-            <p>Contacts</p>
-        </div>
-    </div>
-
-    <div class="landing-page">
-        <div class="left-side">
-            <div class="left-upper">
-                <div class="hitext">
-                   <p> Hi ✌️, I'm <br> <span>Fortuna Daniel</span></p>
-                </div>
             </div>
-            <div class="left-lower">
-                <div class="left-1">
-                    <p>An aspiring Front-End Developer</p>
-                </div>
-                <div class="left-2">
-                    <button class="contact-me-button">Contact me</button>
-                    <button class="download-cv-button">See my cv <img src="assets/images/downloadicon.png"></button>
-                </div>
+            <div class="header-text">
+                <p>About me</p>
+                <p>Projects</p>
+                <p>Contacts</p>
             </div>
         </div>
-    </div>
 
+        <div class="landing-page">
+            <div class="left-side">
+                <div class="left-upper">
+                    <div class="hitext">
+                        <p> Hi ✌️, I'm <br> <span>Fortuna Daniel</span></p>
+                    </div>
+                </div>
+                <div class="left-lower">
+                    <div class="left-1">
+                        <p>An aspiring Front-End Developer</p>
+                    </div>
+                    <div class="left-2">
+                        <button class="contact-me-button">Contact me</button>
+                        <button class="download-cv-button">See my cv <img src="assets/images/downloadicon.png"></button>
+                    </div>
+                    <div class="left-3">
+                        <p class="left31">Scroll down to learn more about me</p>
+                        <p class="left32">(Or use the buttons at the top)</p>
+                    </div>
+                </div>
+            </div>
+            <div class="right-side">
+                <div class="circle1"></div>
+                <div class="circle2"></div>
+                <img src="assets/images/CV-imagew.png">
+            </div>
+        </div>
+        <div class="black-bar">
+            <div class="bb1">
+                <h1>69</h1>
+                <p>Years of experience</p>
+            </div>
+            <div class="bb2">
+                <h1>10001</h1>
+                <p>Projects worked on</p>
+            </div>
+            <div class="bb3">
+                <h1>0</h1>
+                <p>Money or hoes</p>
+            </div>
+        </div>
+    </div>
+    <div class="about-me">
+        <div class="about-left-side">
+            <h1>About me</h1>
+            <h2>
+                I’m a 17 year old, 3rd year student at <span>Center of <br>
+                    Excelence in informatics and IT</span>, majoring in<br>
+                <span>Web development</span>
+            </h2>
+            <p>
+                Growing up in Moldova, my passion for computers began early. <br>
+                At 15, I started college with a focus on IT, and it was there that <br>
+                I discovered my love for web development, particularly frontend <br>
+                development. Now, I’m working to turn that passion into a career, <br>
+                constantly learning and improving my skills to create dynamic, <br>
+                user-friendly websites.
+            </p>
+        </div>
+        <div class="about-right-side">
+            <img src="assets/images/decorationimg.png">
+        </div>
+    </div>
+    <div class="projects">
+        <h1>
+            My Projects
+        </h1>
+        <p>I’m proficient in HTML, CSS, and JavaScript, with a strong focus on creating responsive and interactive<br>
+            websites. I also have extensive experience in design tools like Figma and Photoshop, allowing me to <br>
+           bridge the gap between design and development, feel free to check out my work :)</p>
+    </div>
     <script src="assets/index.js"></script>
 </body>
 
