added the send email form

--- a/index.html
+++ b/index.html
@@ -95,9 +95,27 @@
         </h1>
         <p>I’m proficient in HTML, CSS, and JavaScript, with a strong focus on creating responsive and interactive<br>
             websites. I also have extensive experience in design tools like Figma and Photoshop, allowing me to <br>
-           bridge the gap between design and development, feel free to check out my work :)</p>
+            bridge the gap between design and development, feel free to check out my work :)</p>
+
+
     </div>
-    <script src="assets/index.js"></script>
+    <div class="projects-grid">
+        <div class="prj1"></div>
+        <div class="prj2"></div>
+        <div class="prj3"></div>
+    </div>
+
+    <div class="form">
+        <form action="https://formsubmit.co/fortunadanielmd@gmail.com" method="POST">
+            <input type="text" name="name" placeholder="Name">
+            <input type="text" name="surname" placeholder="Surname">
+            <input type="email" name="email" placeholder="Email">
+            <textarea placeholder="Message"></textarea>
+            <button type="submit">Submit</button>
+                </form>
+    </div>
+
+    <script defer src="assets/index.js"></script>
 </body>
 
 </html>
