updating the lightmode

--- a/index.html
+++ b/index.html
@@ -106,14 +106,45 @@
     </div>
 
     <div class="form">
+        <div class="form-left-side">
+            <h1>Contact me</h1>
+            <p>
+                I’d love to hear from you! Whether you have a <br>
+                project in mind, a question, or just want to <br>
+                connect, <span>feel free to reach out.</span> <br>
+    
+                <br>
+                You can contact me via email or find me on social <br>
+                media. <span>Let’s create something amazing together!</span><br>
+            </p>
+        </div>
+        <div class="form-right-side">
         <form action="https://formsubmit.co/fortunadanielmd@gmail.com" method="POST">
-            <input type="text" name="name" placeholder="Name">
-            <input type="text" name="surname" placeholder="Surname">
-            <input type="email" name="email" placeholder="Email">
-            <textarea placeholder="Message"></textarea>
-            <button type="submit">Submit</button>
+            <div class="namesur">
+            <input type="text" name="name" class="name-input" placeholder="Name">
+            <input type="text" name="surname" class="surname-input" placeholder="Surname"></div>
+            <input type="email" class="email-input" name="email" placeholder="Email">
+            <br>
+            <textarea placeholder="Message" class="message-input"></textarea><br>
+            <button type="submit" class="submit-button">Submit</button>
                 </form>
-    </div>
+            </div>
+        </div>
+
+        <div class="pages-links">
+            <div class="box1">
+                <img src="assets/images/github.png">
+                <button>
+                    Check out my github <img src="assets/images/right-up(1).png">
+                </button>
+            </div>
+            <div class="box2">
+                <img src="assets/images/linkedin.png">
+                <button>
+                    Check out my linkedin <img src="assets/images/right-up(1).png">
+                </button>
+            </div>
+        </div>
 
     <script defer src="assets/index.js"></script>
 </body>
