--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="assets/index.css">
+    <link rel="stylesheet" href="assets/animations.css">
 </head>
 
 <body>
@@ -133,15 +134,15 @@
 
         <div class="pages-links">
             <div class="box1">
-                <img src="assets/images/github.png">
+                <img class="boximg" src="assets/images/github.png">
                 <button>
-                    Check out my github <img src="assets/images/right-up(1).png">
+                    Check out my github <img class="btnimg"src="assets/images/right-up(1).png">
                 </button>
             </div>
             <div class="box2">
-                <img src="assets/images/linkedin.png">
+                <img class="boximg" src="assets/images/linkedin.png">
                 <button>
-                    Check out my linkedin <img src="assets/images/right-up(1).png">
+                    Check out my linkedin <img class="btnimg" src="assets/images/right-up(1).png">
                 </button>
             </div>
         </div>
