somehow made it work

--- a/index.html
+++ b/index.html
@@ -101,8 +101,19 @@
 
     </div>
     <div class="projects-grid">
-        <div class="prj1"></div>
-        <div class="prj2"></div>
+        <div class="prj1">
+        </div>
+        <div class="prj2">
+            <img src="assets/images/Mosteriass.png">
+            <div class="prj2hidden">
+               <h1>Mosteria</h1>
+               <p>Mosteria, an e-menu for a popular <br> restaurant in Anenii Noi</p> 
+               <div class="links">
+                    <a href="https://www.mosteria.md/">Mosteria.md</a>
+                    <a href="https://github.com/twelfydelfy/Mostiera-simple-menu">Github link</a>
+               </div>
+            </div>
+        </div>
         <div class="prj3"></div>
     </div>
 
