changed the projects tab a little

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                <h1>Mosteria</h1>
                <p>Mosteria, an e-menu for a popular <br> restaurant in Anenii Noi</p> 
                <div class="links">
-                    <a href="https://www.mosteria.md/">Mosteria.md</a>
-                    <a href="https://github.com/twelfydelfy/Mostiera-simple-menu">Github link</a>
+                    <a href="https://www.mosteria.md/" target="_blank">Mosteria.md</a>
+                    <a href="https://github.com/twelfydelfy/Mostiera-simple-menu" target="_blank">Github link</a>
                </div>
             </div>
         </div>
