--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
         </div>
     </div>
-    <div class="about-me">
+    <div class="about-me fade-in">
         <div class="about-left-side">
             <h1>About me</h1>
             <h2>
@@ -90,7 +90,7 @@
             <img src="assets/images/decorationimg.png">
         </div>
     </div>
-    <div class="projects">
+    <div class="projects fade-in">
         <h1>
             My Projects
         </h1>
@@ -100,7 +100,7 @@
 
 
     </div>
-    <div class="projects-grid">
+    <div class="projects-grid fade-in">
         <div class="prj1">
         </div>
         <div class="prj2">
@@ -117,7 +117,7 @@
         <div class="prj3"></div>
     </div>
 
-    <div class="form">
+    <div class="form fade-in">
         <div class="form-left-side">
             <h1>Contact me</h1>
             <p>
@@ -143,7 +143,7 @@
             </div>
         </div>
 
-        <div class="pages-links">
+        <div class="pages-links fade-in2">
             <div class="box1">
                 <img class="boximg" src="assets/images/github.png">
                 <button>
@@ -157,7 +157,9 @@
                 </button>
             </div>
         </div>
-
+        <hr>
+        <p class="final-text">Fortuna Daniel</p>
+        <p class="final-text">2024</p>
     <script defer src="assets/index.js"></script>
 </body>
 
