desktop lightmode complete

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="right-side">
                 <div class="circle1"></div>
-                <div class="circle2"></div>
+               
                 <img src="assets/images/CV-imagew.png">
             </div>
         </div>
@@ -69,15 +69,15 @@
             </div>
         </div>
     </div>
-    <div class="about-me fade-in">
+    <div class="about-me">
         <div class="about-left-side">
-            <h1>About me</h1>
-            <h2>
+            <h1 class="fade-in">About me</h1>
+            <h2 class="fade-in3">
                 I’m a 17 year old, 3rd year student at <span>Center of <br>
                     Excelence in informatics and IT</span>, majoring in<br>
                 <span>Web development</span>
             </h2>
-            <p>
+            <p class="fade-in3">
                 Growing up in Moldova, my passion for computers began early. <br>
                 At 15, I started college with a focus on IT, and it was there that <br>
                 I discovered my love for web development, particularly frontend <br>
@@ -86,24 +86,24 @@
                 user-friendly websites.
             </p>
         </div>
-        <div class="about-right-side">
+        <div class="about-right-side fade-in">
             <img src="assets/images/decorationimg.png">
         </div>
     </div>
-    <div class="projects fade-in">
-        <h1>
+    <div class="projects">
+        <h1 class="fade-in">
             My Projects
         </h1>
-        <p>I’m proficient in HTML, CSS, and JavaScript, with a strong focus on creating responsive and interactive<br>
+        <p class="fade-in3">I’m proficient in HTML, CSS, and JavaScript, with a strong focus on creating responsive and interactive<br>
             websites. I also have extensive experience in design tools like Figma and Photoshop, allowing me to <br>
             bridge the gap between design and development, feel free to check out my work :)</p>
 
 
     </div>
-    <div class="projects-grid fade-in">
-        <div class="prj1">
+    <div class="projects-grid">
+        <div class="prj1 fade-in3">
         </div>
-        <div class="prj2">
+        <div class="prj2 fade-in3">
             <img src="assets/images/Mosteriass.png">
             <div class="prj2hidden">
                <h1>Mosteria</h1>
@@ -114,11 +114,11 @@
                </div>
             </div>
         </div>
-        <div class="prj3"></div>
+        <div class="prj3 fade-in"></div>
     </div>
 
-    <div class="form fade-in">
-        <div class="form-left-side">
+    <div class="form">
+        <div class="form-left-side fade-in3">
             <h1>Contact me</h1>
             <p>
                 I’d love to hear from you! Whether you have a <br>
@@ -130,7 +130,7 @@
                 media. <span>Let’s create something amazing together!</span><br>
             </p>
         </div>
-        <div class="form-right-side">
+        <div class="form-right-side fade-in">
         <form action="https://formsubmit.co/fortunadanielmd@gmail.com" method="POST">
             <div class="namesur">
             <input type="text" name="name" class="name-input" placeholder="Name">
