working on darkmode

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <body>
     <div class="landing">
         <div class="header">
-            <div class="lightmode">
+            <button class="lightmode" id="lightmode">
                 <img id="sunImage" src="assets/images/sun.png">
-            </div>
+            </button>
             <div class="header-text">
-                <p>About me</p>
-                <p>Projects</p>
-                <p>Contacts</p>
+                <a href="#about-me">About me</a>
+                <a href="#projects">Projects</a>
+                <a href="#contacts">Contact Me</a>
             </div>
         </div>
 
@@ -69,7 +69,7 @@
             </div>
         </div>
     </div>
-    <div class="about-me">
+    <div class="about-me" id="about-me">
         <div class="about-left-side">
             <h1 class="fade-in">About me</h1>
             <h2 class="fade-in3">
@@ -90,7 +90,7 @@
             <img src="assets/images/decorationimg.png">
         </div>
     </div>
-    <div class="projects">
+    <div class="projects" id="projects">
         <h1 class="fade-in">
             My Projects
         </h1>
@@ -117,7 +117,7 @@
         <div class="prj3 fade-in"></div>
     </div>
 
-    <div class="form">
+    <div class="form" id="contacts">
         <div class="form-left-side fade-in3">
             <h1>Contact me</h1>
             <p>
