changed the icons for darkmode

--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
 
         <div class="pages-links fade-in2">
             <div class="box1">
-                <img class="boximg" src="assets/images/github.png">
+                <img class="boximg" id="boximg" src="assets/images/github.png">
                 <button>
                     Check out my github <img class="btnimg"src="assets/images/right-up(1).png">
                 </button>
             </div>
             <div class="box2">
-                <img class="boximg" src="assets/images/linkedin.png">
+                <img class="boximg" id="boximg2" src="assets/images/linkedin.png">
                 <button>
                     Check out my linkedin <img class="btnimg" src="assets/images/right-up(1).png">
                 </button>
