added mobile version of the projects expansion, now just gotta do this with all of the hower-abale elements, then fix the localstorage for lightmode.

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                 <span>Web development</span>
             </h2>
             <p class="fade-in3">
-                Growing up in Moldova, my passion for computers began early. <br>
-                At 15, I started college with a focus on IT, and it was there that <br>
-                I discovered my love for web development, particularly frontend <br>
-                development. Now, I’m working to turn that passion into a career, <br>
-                constantly learning and improving my skills to create dynamic, <br>
+                Growing up in Moldova, my passion for computers began early. 
+                At 15, I started college with a focus on IT, and it was there that 
+                I discovered my love for web development, particularly frontend 
+                development. Now, I’m working to turn that passion into a career, 
+                constantly learning and improving my skills to create dynamic,
                 user-friendly websites.
             </p>
         </div>
@@ -101,8 +101,8 @@
 
     </div>
     <div class="projects-grid">
-        <div class="prj1 fade-in3">
-        </div>
+        <!--<div class="prj1 fade-in3">
+        </div>-->
         <div class="prj2 fade-in3">
             <img src="assets/images/Mosteriass.png">
             <div class="prj2hidden">
@@ -114,7 +114,7 @@
                </div>
             </div>
         </div>
-        <div class="prj3 fade-in"></div>
+       <!-- <div class="prj3 fade-in"></div>-->
     </div>
 
     <div class="form" id="contacts">
