finally done with the mobile version, except for the animations and download cv

--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
         <div class="form-right-side fade-in">
         <form action="https://formsubmit.co/fortunadanielmd@gmail.com" method="POST">
             <div class="namesur">
-            <input type="text" name="name" class="name-input" placeholder="Name">
-            <input type="text" name="surname" class="surname-input" placeholder="Surname"></div>
-            <input type="email" class="email-input" name="email" placeholder="Email">
+            <input type="text" name="name" class="name-input" placeholder="Name" required>
+            <input type="text" name="surname" class="surname-input" placeholder="Surname" required></div>
+            <input type="email" class="email-input" name="email" placeholder="Email" required>
             <br>
-            <textarea placeholder="Message" class="message-input"></textarea><br>
+            <textarea placeholder="Message" class="message-input" required></textarea><br>
             <button type="submit" class="submit-button">Submit</button>
                 </form>
             </div>
