playing around with animations

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                         <p>An aspiring Front-End Developer</p>
                     </div>
                     <div class="left-2">
-                        <button class="contact-me-button">Contact me</button>
-                        <button class="download-cv-button">See my cv <img src="assets/images/downloadicon.png"></button>
+                        <a href="#contacts"><button class="contact-me-button">Contact me</button></a>
+                        <a><button class="download-cv-button">See my cv <img src="assets/images/downloadicon.png"></button></a>
                     </div>
                     <div class="left-3">
                         <p class="left31">Scroll down to learn more about me</p>
@@ -146,15 +146,15 @@
         <div class="pages-links fade-in2">
             <div class="box1">
                 <img class="boximg" id="boximg" src="assets/images/github.png">
-                <button>
+                <a href="https://github.com/twelfydelfy" target="_blank"><button>
                     Check out my github <img class="btnimg"src="assets/images/right-up(1).png">
-                </button>
+                </button></a>
             </div>
             <div class="box2">
                 <img class="boximg" id="boximg2" src="assets/images/linkedin.png">
-                <button>
+                <a href="https://www.linkedin.com/in/fortuna-daniel-a025a32a3/" target="_blank"><button>
                     Check out my linkedin <img class="btnimg" src="assets/images/right-up(1).png">
-                </button>
+                </button></a>
             </div>
         </div>
         <hr>
