--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="left-2">
                         <a href="#contacts"><button class="contact-me-button">Contact me</button></a>
-                        <a><button class="download-cv-button">See my cv <img src="assets/images/downloadicon.png"></button></a>
+                        <a><button class="download-cv-button">See my cv </button></a>
                     </div>
                     <div class="left-3">
                         <p class="left31">Scroll down to learn more about me</p>
