finished the mobile, tablet versions, seemingly no problems, ready for deployment.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a><button class="download-cv-button">See my cv </button></a>
                     </div>
                     <div class="left-3">
-                        <p class="left31">Scroll down to learn more about me</p>
+                         <p class="left31">Scroll down to learn more about me</p>
                         <p class="left32">(Or use the buttons at the top)</p>
                     </div>
                 </div>
@@ -56,16 +56,16 @@
         </div>
         <div class="black-bar">
             <div class="bb1">
-                <h1>69</h1>
-                <p>Years of experience</p>
+                <h1>6</h1>
+                <p>Months of experience</p>
             </div>
-            <div class="bb2">
+           <!-- <div class="bb2">
                 <h1>10001</h1>
                 <p>Projects worked on</p>
-            </div>
+            </div>-->
             <div class="bb3">
-                <h1>0</h1>
-                <p>Money or hoes</p>
+                <h1>Countless</h1>
+                <p>Hours of coding</p>
             </div>
         </div>
     </div>
