forgot to make the cv pdf open up in another window

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="left-2">
                         <a href="#contacts"><button class="contact-me-button">Contact me</button></a>
-                        <a href="assets/Daniel Fortuna.pdf"><button class="download-cv-button">See my cv </button></a>
+                        <a href="assets/Daniel Fortuna.pdf" target="_blank"><button class="download-cv-button">See my cv </button></a>
                     </div>
                     <div class="left-3">
                          <p class="left31">Scroll down to learn more about me</p>
