updated ammount of experience

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         </div>
         <div class="black-bar">
             <div class="bb1">
-                <h1>6</h1>
-                <p>Months of experience</p>
+                <h1>1</h1>
+                <p>Year of experience</p>
             </div>
            <!-- <div class="bb2">
                 <h1>10001</h1>
