added TS and React on my list of knowledge

--- a/index.html
+++ b/index.html
@@ -59,10 +59,6 @@
                 <h1>1</h1>
                 <p>Year of experience</p>
             </div>
-           <!-- <div class="bb2">
-                <h1>10001</h1>
-                <p>Projects worked on</p>
-            </div>-->
             <div class="bb3">
                 <h1>Countless</h1>
                 <p>Hours of coding</p>
@@ -94,7 +90,7 @@
         <h1 class="fade-in">
             My Projects
         </h1>
-        <p class="fade-in3">I’m proficient in HTML, CSS, and JavaScript, with a strong focus on creating responsive and interactive<br>
+        <p class="fade-in3">I’m proficient in HTML, CSS, JavaScript, TypeScript and React, with a strong focus on creating responsive and interactive<br>
             websites. I also have extensive experience in design tools like Figma and Photoshop, allowing me to <br>
             bridge the gap between design and development, feel free to check out my work :)</p>
 
