updated some data

--- a/index.html
+++ b/index.html
@@ -40,24 +40,25 @@
                     </div>
                     <div class="left-2">
                         <a href="#contacts"><button class="contact-me-button">Contact me</button></a>
-                        <a href="assets/Daniel Fortuna.pdf" target="_blank"><button class="download-cv-button">See my cv </button></a>
+                        <a href="assets/images/Daniel Fortuna-1.pdf" target="_blank"><button class="download-cv-button">See my cv
+                            </button></a>
                     </div>
                     <div class="left-3">
-                         <p class="left31">Scroll down to learn more about me</p>
+                        <p class="left31">Scroll down to learn more about me</p>
                         <p class="left32">(Or use the buttons at the top)</p>
                     </div>
                 </div>
             </div>
             <div class="right-side">
                 <div class="circle1"></div>
-               
+
                 <img src="assets/images/CV-imagew.png">
             </div>
         </div>
         <div class="black-bar">
             <div class="bb1">
-                <h1>1</h1>
-                <p>Year of experience</p>
+                <h1>2+</h1>
+                <p>Years of experience</p>
             </div>
             <div class="bb3">
                 <h1>Countless</h1>
@@ -69,15 +70,15 @@
         <div class="about-left-side">
             <h1 class="fade-in">About me</h1>
             <h2 class="fade-in3">
-                I’m a 17 year old, 3rd year student at <span>Center of <br>
+                I’m an 18 year old, 4th year student at <span>Center of <br>
                     Excelence in informatics and IT</span>, majoring in<br>
                 <span>Web development</span>
             </h2>
             <p class="fade-in3">
-                Growing up in Moldova, my passion for computers began early. 
-                At 15, I started college with a focus on IT, and it was there that 
-                I discovered my love for web development, particularly frontend 
-                development. Now, I’m working to turn that passion into a career, 
+                Growing up in Moldova, my passion for computers began early.
+                At 15, I started college with a focus on IT, and it was there that
+                I discovered my love for web development, particularly frontend
+                development. Now, I’m working to turn that passion into a career,
                 constantly learning and improving my skills to create dynamic,
                 user-friendly websites.
             </p>
@@ -90,9 +91,11 @@
         <h1 class="fade-in">
             My Projects
         </h1>
-        <p class="fade-in3">I’m proficient in HTML, CSS, JavaScript, TypeScript and React, with a strong focus on creating responsive and interactive<br>
-            websites. I also have extensive experience in design tools like Figma and Photoshop, allowing me to <br>
-            bridge the gap between design and development, feel free to check out my work :)</p>
+        <p class="fade-in3">I’m proficient in HTML, CSS, JavaScript, Git and Version Control, Vite, TypeScript and
+            React, with a strong focus on creating responsive and interactive
+            websites. I also have extensive experience in design tools like Figma and Photoshop, allowing me to
+            bridge the gap between design and development, feel free to check out my work :)
+        </p>
 
 
     </div>
@@ -100,17 +103,17 @@
         <!--<div class="prj1 fade-in3">
         </div>-->
         <div class="prj2 fade-in3">
-            <img src="assets/images/Mosteriass.png">
+            <img src="assets/images/Mosteria.png">
             <div class="prj2hidden">
-               <h1>Mosteria</h1>
-               <p>Mosteria, an e-menu for a popular <br> restaurant in Anenii Noi</p> 
-               <div class="links">
+                <h1>Mosteria</h1>
+                <p>Mosteria, an e-menu for a popular <br> restaurant in Anenii Noi</p>
+                <div class="links">
                     <a href="https://www.mosteria.md/" target="_blank">Mosteria.md</a>
-                    <a href="https://github.com/twelfydelfy/Mostiera-simple-menu" target="_blank">Github link</a>
-               </div>
+                    <a href="https://github.com/twelfydelfy/Mosteria" target="_blank">Github link</a>
+                </div>
             </div>
         </div>
-       <!-- <div class="prj3 fade-in"></div>-->
+        <!-- <div class="prj3 fade-in"></div>-->
     </div>
 
     <div class="form" id="contacts">
@@ -120,42 +123,43 @@
                 I’d love to hear from you! Whether you have a <br>
                 project in mind, a question, or just want to <br>
                 connect, <span>feel free to reach out.</span> <br>
-    
+
                 <br>
                 You can contact me via email or find me on social <br>
                 media. <span>Let’s create something amazing together!</span><br>
             </p>
         </div>
         <div class="form-right-side fade-in">
-        <form action="https://formsubmit.co/fortunadanielmd@gmail.com" method="POST">
-            <div class="namesur">
-            <input type="text" name="name" class="name-input" placeholder="Name" required>
-            <input type="text" name="surname" class="surname-input" placeholder="Surname" required></div>
-            <input type="email" class="email-input" name="email" placeholder="Email" required>
-            <br>
-            <textarea placeholder="Message" class="message-input" required></textarea><br>
-            <button type="submit" class="submit-button">Submit</button>
-                </form>
-            </div>
+            <form action="https://formsubmit.co/fortunadanielmd@gmail.com" method="POST">
+                <div class="namesur">
+                    <input type="text" name="name" class="name-input" placeholder="Name" required>
+                    <input type="text" name="surname" class="surname-input" placeholder="Surname" required>
+                </div>
+                <input type="email" class="email-input" name="email" placeholder="Email" required>
+                <br>
+                <textarea placeholder="Message" class="message-input" required></textarea><br>
+                <button type="submit" class="submit-button">Submit</button>
+            </form>
         </div>
+    </div>
 
-        <div class="pages-links fade-in2">
-            <div class="box1">
-                <img class="boximg" id="boximg" src="assets/images/github.png">
-                <a href="https://github.com/twelfydelfy" target="_blank"><button>
-                    Check out my github <img class="btnimg"src="assets/images/right-up(1).png">
+    <div class="pages-links fade-in2">
+        <div class="box1">
+            <img class="boximg" id="boximg" src="assets/images/github.png">
+            <a href="https://github.com/twelfydelfy" target="_blank"><button>
+                    Check out my github <img class="btnimg" src="assets/images/right-up(1).png">
                 </button></a>
-            </div>
-            <div class="box2">
-                <img class="boximg" id="boximg2" src="assets/images/linkedin.png">
-                <a href="https://www.linkedin.com/in/fortuna-daniel-a025a32a3/" target="_blank"><button>
+        </div>
+        <div class="box2">
+            <img class="boximg" id="boximg2" src="assets/images/linkedin.png">
+            <a href="https://www.linkedin.com/in/fortuna-daniel-a025a32a3/" target="_blank"><button>
                     Check out my linkedin <img class="btnimg" src="assets/images/right-up(1).png">
                 </button></a>
-            </div>
         </div>
-        <hr>
-        <p class="final-text">Fortuna Daniel</p>
-        <p class="final-text">2024</p>
+    </div>
+    <hr>
+    <p class="final-text">Fortuna Daniel</p>
+    <p class="final-text">2025</p>
     <script defer src="assets/index.js"></script>
 </body>
 
