updates to the projects

--- a/index.html
+++ b/index.html
@@ -103,6 +103,17 @@
         <!--<div class="prj1 fade-in3">
         </div>-->
         <div class="prj2 fade-in3">
+            <img src="assets/images/Motorhead.png">
+            <div class="prj2hidden">
+                <h1>Motorhead Motors</h1>
+                <p>A mockup website of a motorcycle store</p>
+                <div class="links">
+                    <a href="https://practica-xi-one.vercel.app/" target="_blank">Link</a>
+                    <a href="https://github.com/twelfydelfy/Practica.git" target="_blank">Github link</a>
+                </div>
+            </div>
+        </div>
+        <div class="prj2 fade-in3">
             <img src="assets/images/Mosteria.png">
             <div class="prj2hidden">
                 <h1>Mosteria</h1>
@@ -110,6 +121,17 @@
                 <div class="links">
                     <a href="https://www.mosteria.md/" target="_blank">Mosteria.md</a>
                     <a href="https://github.com/twelfydelfy/Mosteria" target="_blank">Github link</a>
+                </div>
+            </div>
+        </div>
+        <div class="prj2 fade-in3">
+            <img src="assets/images/Tracker.png">
+            <div class="prj2hidden">
+                <h1>Money Tracker</h1>
+                <p>A basic money tracker made in react, calling API's for the exchange rate and saving data to localstorage</p>
+                <div class="links">
+                    <a href="https://react-money-tracker-project.vercel.app/" target="_blank">Link</a>
+                    <a href="https://github.com/twelfydelfy/Practica.git" target="_blank">Github link</a>
                 </div>
             </div>
         </div>
